syntax = "proto3";

//protoc -I ./  ./*.proto --go_out=plugins=grpc:.


package account;

service InternalApi {
    rpc GetLoginLink (GetLoginLinkRequest) returns (LoginLinkResponse) {
    }
}

message GetLoginLinkRequest {
    int32 telegramId = 1;
}

message LoginLinkResponse {
    string url = 1;
    int64 expiration = 2;
}
